# rustsnake

./: Cargo.toml  README.md  prompts.md
snake/: Cargo.toml
snake/benches/: heuristic_benchmark.rs
snake/src/: battlesnake_api.rs  game_state.rs  heuristic.rs  lib.rs  main.rs  search.rs  tree.rs  visualizer.rs
snake/tests/: game_state_test.rs  heuristic_test.rs  search_test.rs  visualizer_test.rs
src/: game_state.rs  heuristic.rs  main.rs  search.rs  tree.rs
tests/: game_state_test.rs  heuristic_test.rs  search_test.rs  visualizer_test.rs
visualiser/: monitor.ts  package-lock.json  package.json  vite.config.ts
visualiser/src/: App.tsx  main.tsx
visualiser/tree-data/: 20241018_051351.924628_80528a45-4dff-465c-ad32-9af898f9fcf4.json  20241018_051612.382198_98266bc3-795e-43fe-86cf-d50d55413daf.json
