[package]
name = "battlesnake"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num_cpus = "1.13"
uuid = { version = "1.1", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "heuristic_benchmark"
harness = false